[gd_scene load_steps=3 format=3 uid="uid://dg8nwrmfkwufg"]

[ext_resource type="Script" path="res://scenes/loan_ui.gd" id="1_68r7e"]
[ext_resource type="PackedScene" uid="uid://c7gwvvyygu3a8" path="res://scenes/loan_slot.tscn" id="2_03oyq"]

[node name="LoanUI" type="PanelContainer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 316.0
offset_top = -618.0
offset_right = 887.0
offset_bottom = -186.0
grow_vertical = 0
script = ExtResource("1_68r7e")
loan_slot = ExtResource("2_03oyq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Current Bank Loans"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "x"

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Loan_list" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="new_loans" type="GridContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
